--- a/src/views/home.pug
+++ b/src/views/home.pug
@@ -14,10 +14,15 @@ html(lang="en")
                 form
                     input(type="text", placeholder="room name", required)
                     button Enter Room
+                h4 Open Rooms :
+                ul
             div#room
                 h3
                 ul
-                form
+                form#nickname
+                    input(type="text", placeholder="nickname", required)
+                    button Send
+                form#message
                     input(type="text", placeholder="message name", required)
                     button Enter Message
             //- form#nick
