채팅방목록 추가 및 수정 0815 10:43

--- a/src/public/css/style.css
+++ b/src/public/css/style.css
@@ -81,6 +81,14 @@ form button {
   width: 100%;
   z-index: 10;
 }
+.chat-list ul{
+  /* display: flex; */
+  /* flex-direction: column; */
+}
+.chat-list li{
+  list-style: none;
+  padding: 10px;
+}
 .msg {
   width: 100%;
   background-color: var(--default-color);
